tests/executionspec/snapshots/execution_spec__cors-allow-cred-false.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "access-control-allow-headers": "Authorization",
    "access-control-allow-methods": "POST, OPTIONS",
    "access-control-max-age": "23",
    "vary": "origin, access-control-request-method, access-control-request-headers"
  },
  "body": null
}
