tests/executionspec/snapshots/execution_spec__env-value.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  userId: Int!
}

type Query {
  post1: Post
  post2: Post
  post3: Post
}

scalar Url

schema {
  query: Query
}
