tests/executionspec/snapshots/execution_spec__https.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com") {
  query: Query
}

type Query {
  firstUser: User @http(baseURL: "https://jsonplaceholder.typicode.com", path: "/users/1")
}

type User {
  id: Int
  name: String
}
